<resources>
    <string name="app_name">FitApp</string>
    <string name="main_fragment_tv_title">Nutrition</string>
    <string name="main_fragment_title_calories_goal_title">Calories Goal:</string>
    <string name="main_fragment_title_eating_title">Eating:</string>
    <string name="main_fragment_title_burn_title">Burn:</string>
    <string name="main_fragment_default_value">kcal</string>
    <string name="main_fragment_title_total_title">Total:</string>
    <string name="breakfast">breakfast</string>
    <string name="lunch">lunch</string>
    <string name="dinner">dinner</string>
    <string name="kcal">kcal</string>
    <string name="input_kcal">Input Kcal</string>
    <string name="kcalories">Kcalories</string>
    <string name="calories_value">%d kcal</string>
    <string name="enter_value">Enter value kcal for %s</string>
    <string name="title_kcal">kcal</string>
</resources>